--- a/src/shared/ui/buttons/Button/Button.module.scss
+++ b/src/shared/ui/buttons/Button/Button.module.scss
@@ -3,6 +3,14 @@
 
   .container {
     @apply flex py-3.5 px-6 bg-accents rounded-lg cursor-pointer;
+
+    &:hover {
+      @apply transition-colors bg-darkAccents;
+    }
+
+    &:active {
+      @apply transition ease-in-out duration-75 bg-accents;
+    }
   }
 
   .title {
@@ -18,11 +26,6 @@
 
     .image {
       @apply ml-4;
-    }
-  }
-  &:active {
-    .container {
-      @apply transition ease-in-out duration-75 delay-75 bg-darkAccents;
     }
   }
 }
