--- a/src/shared/ui/buttons/AddCartButton/AddCartButton.module.scss
+++ b/src/shared/ui/buttons/AddCartButton/AddCartButton.module.scss
@@ -6,25 +6,25 @@
 
 .notActive {
   rect {
-    @apply transition ease-in-out duration-1000 fill-offWhiteF;
+    @apply transition duration-1000 fill-offWhiteF;
   }
   path {
-    @apply transition ease-in-out duration-1000 stroke-black;
+    @apply transition duration-1000 stroke-black;
   }
   .basket__bottom {
-    @apply transition ease-in-out duration-1000 fill-black;
+    @apply transition duration-1000 fill-black;
   }
 }
 
 .active {
   rect {
-    @apply transition ease-in-out duration-1000 fill-accents;
+    @apply transition duration-1000 fill-accents;
   }
 
   path {
-    @apply transition ease-in-out duration-1000 stroke-white;
+    @apply transition duration-1000 stroke-white;
   }
   .basket__bottom {
-    @apply transition ease-in-out duration-1000 fill-white;
+    @apply transition duration-1000 fill-white;
   }
 }
