--- a/src/shared/ui/buttons/ProfileButton/ProfileButton.module.scss
+++ b/src/shared/ui/buttons/ProfileButton/ProfileButton.module.scss
@@ -2,18 +2,18 @@
   svg {
     @apply cursor-pointer;
     rect {
-      @apply transition ease-in-out duration-1000 fill-white;
+      @apply transition duration-1000 fill-white;
     }
     path {
-      @apply transition ease-in-out duration-1000 stroke-black;
+      @apply transition duration-1000 stroke-black;
     }
 
     &:active {
       rect {
-        @apply transition ease-in-out duration-75 fill-accents;
+        @apply transition duration-75 fill-accents;
       }
       path {
-        @apply transition ease-in-out duration-75 stroke-white;
+        @apply transition duration-75 stroke-white;
       }
     }
   }
