В Language.module добавил padding

--- a/src/entities/ui/Language/Language.module.scss
+++ b/src/entities/ui/Language/Language.module.scss
@@ -2,7 +2,7 @@
   @apply flex items-center;
 
   p {
-    @apply font-normal text-[0.8125rem] text-white;
+    @apply pr-1.5 font-normal text-[0.8125rem] text-white;
   }
   img {
     @apply w-[0.4375rem] h-[0.2188rem];
