--- a/src/shared/ui/Logo/Logo.module.scss
+++ b/src/shared/ui/Logo/Logo.module.scss
@@ -1,8 +1,6 @@
 div {
-  @apply flex items-center;
-
   .container {
-    @apply cursor-pointer;
+    @apply flex items-center cursor-pointer;
 
     .image {
       @apply w-10 h-10;
