--- a/src/widgets/header/ui/Top/Top.module.scss
+++ b/src/widgets/header/ui/Top/Top.module.scss
@@ -1,5 +1,9 @@
 .header__top {
-  @apply flex justify-between opacity-70;
+  @apply w-full bg-black justify-center items-center;
+
+  .container {
+    @apply max-w-[82.5rem] py-3.5 m-auto flex justify-between opacity-70;
+  }
 
   ul {
     @apply flex;
