В Contact.scss добавил flex

--- a/src/entities/ui/Contact/Contact.module.scss
+++ b/src/entities/ui/Contact/Contact.module.scss
@@ -1,6 +1,6 @@
 .contact {
   div {
-    @apply cursor-pointer;
+    @apply flex cursor-pointer;
 
     .title {
       @apply pr-2 text-darkGray transition-colors delay-75;
