--- a/src/entities/ui/Language/Language.module.scss
+++ b/src/entities/ui/Language/Language.module.scss
@@ -5,6 +5,6 @@
     @apply pr-1.5 font-normal text-[0.8125rem] text-white;
   }
   img {
-    @apply w-[0.4375rem] h-[0.2188rem];
+    @apply w-3 h-3;
   }
 }
