В ToCart.scss увеличил размер шрифта

--- a/src/entities/ui/ToCart/ToCart.module.scss
+++ b/src/entities/ui/ToCart/ToCart.module.scss
@@ -6,7 +6,7 @@
       @apply transition duration-1000;
     }
     .title {
-      @apply pl-2 pr-3 text-xs text-black transition duration-1000;
+      @apply pl-2 pr-3 text-sm text-black transition duration-1000;
     }
     .count {
       @apply text-[0.625rem] text-white font-dmSans py-0.5 px-[0.4375rem] bg-darkAccents rounded-3xl transition duration-1000;
