В ArrowButton добавил класс green

--- a/src/shared/ui/buttons/ArrowButton/ArrowButton.module.scss
+++ b/src/shared/ui/buttons/ArrowButton/ArrowButton.module.scss
@@ -19,6 +19,16 @@
   }
 }
 
+.green {
+  rect {
+    @apply fill-white;
+  }
+
+  path {
+    @apply stroke-darkAccents;
+  }
+}
+
 .rotate__arrow {
   @apply rotate-180;
 }
