В DiscountCard.scss добавил select:none

--- a/src/entities/ui/DiscountCard/DiscountCard.module.scss
+++ b/src/entities/ui/DiscountCard/DiscountCard.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply w-[29.6875rem] h-[40.5625rem] relative;
+  @apply w-[29.6875rem] h-[40.5625rem] relative select-none;
 
   img {
     @apply w-[29.6875rem] h-[40.5625rem];
