--- a/src/widgets/FeaturesBlock/ui/FeaturesBlock.module.scss
+++ b/src/widgets/FeaturesBlock/ui/FeaturesBlock.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply relative bg-white px-[4.375rem] -mt-[4.5625rem] rounded-xl shadow-1md max-[630px]:mt-0 max-[705px]:px-1 #{!important};
+  @apply relative max-w-[1320px] bg-white px-[4.375rem] -mt-[4.5625rem] rounded-xl shadow-1md max-[630px]:mt-0 max-[705px]:px-1 #{!important};
 
   .list {
     @apply flex flex-wrap justify-between items-center max-[1271px]:justify-center;
