В Card добавил drop-shadow при наведении, В ProductCard поменял jpg на svg

--- a/src/shared/ui/card/styles.module.scss
+++ b/src/shared/ui/card/styles.module.scss
@@ -1,7 +1,8 @@
 .container {
-  @apply max-w-[19.5rem] relative;
+  @apply max-w-[19.5rem] relative transition-all delay-75;
 
   &:hover {
+    @apply drop-shadow-1md transition-all delay-75;
     .favorite {
       @apply opacity-100 transition-all delay-75;
     }
