В TopCategories добавил important

--- a/src/entities/top-categories/ui/styles.module.scss
+++ b/src/entities/top-categories/ui/styles.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply mt-[3.25rem];
+  @apply mt-[3.25rem] #{!important};
 
   .list {
     @apply flex flex-wrap justify-between max-[1331px]:justify-center max-[415px]:-mt-10 max-[356px]:-mt-16 max-[320px]:-mt-28;
