--- a/src/shared/ui/buttons/Button/styles.module.scss
+++ b/src/shared/ui/buttons/Button/styles.module.scss
@@ -2,7 +2,7 @@
   @apply flex select-none;
 
   .container {
-    @apply flex py-3.5 px-6 bg-accents rounded-lg cursor-pointer;
+    @apply flex py-3.5 px-6 bg-accents rounded-lg cursor-pointer transition-colors delay-75;
 
     &:hover {
       @apply transition-colors bg-darkAccents;
