--- a/src/shared/ui/buttons/arrow-button/styles.module.scss
+++ b/src/shared/ui/buttons/arrow-button/styles.module.scss
@@ -5,11 +5,11 @@
 
     &:hover {
       rect {
-        @apply transition-colors fill-darkAccents;
+        @apply transition-colors fill-darkAccents delay-75;
       }
 
       path {
-        @apply transition-colors stroke-white;
+        @apply transition-colors stroke-white delay-75;
       }
     }
     &:active {
@@ -20,13 +20,23 @@
   }
 }
 
-.green {
+.grey {
   rect {
-    @apply fill-white;
+    @apply fill-white transition-colors delay-75;
   }
 
   path {
-    @apply stroke-darkAccents;
+    @apply stroke-black transition-colors delay-75;
+  }
+}
+
+.green {
+  rect {
+    @apply fill-white transition-colors delay-75;
+  }
+
+  path {
+    @apply stroke-darkAccents transition-colors delay-75;
   }
 }
 
