--- a/src/entities/language/ui/styles.module.scss
+++ b/src/entities/language/ui/styles.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply flex items-center;
+  @apply flex items-center opacity-70;
 
   p {
     @apply pr-1.5 font-normal text-[0.8125rem] text-white;
