--- a/src/shared/ui/card/styles.module.scss
+++ b/src/shared/ui/card/styles.module.scss
@@ -12,11 +12,23 @@
   }
 
   .tag {
-    @apply flex absolute m-5 select-none;
+    @apply flex absolute z-10 m-5 select-none;
   }
   .favorite {
-    @apply absolute right-0 m-5 select-none opacity-0 transition-all delay-75;
+    @apply absolute top-0 right-0 m-5 select-none opacity-0 transition-all delay-75;
   }
+
+  .image {
+    @apply relative w-[19.5rem] h-[19.5rem];
+
+    img {
+      @apply top-0 left-0 absolute h-full w-full rounded-md;
+    }
+  }
+
+  /* .favorite {
+    @apply absolute top-0 right-0 m-5 select-none opacity-0 transition-all delay-75;
+  } */
 
   .background {
   }
