--- a/src/widgets/header/ui/Top/styles.module.scss
+++ b/src/widgets/header/ui/Top/styles.module.scss
@@ -15,7 +15,7 @@
         @apply relative;
 
         .modal {
-          @apply absolute top-[20px] left-0 bg-gray rounded-md w-full text-center;
+          @apply absolute top-[20px] left-0;
         }
       }
 
