В Header-Top задал z-index для modal

--- a/src/widgets/header/ui/Top/styles.module.scss
+++ b/src/widgets/header/ui/Top/styles.module.scss
@@ -15,7 +15,7 @@
         @apply relative;
 
         .modal {
-          @apply absolute top-[20px] left-0;
+          @apply absolute z-[1] top-[20px] left-0;
         }
       }
 
