--- a/src/entities/our-products/ui/styles.module.scss
+++ b/src/entities/our-products/ui/styles.module.scss
@@ -17,13 +17,15 @@
 
   .products__pagination {
     @apply flex justify-center items-center mt-[20px];
+
     .prev__button {
       @apply mr-5;
     }
+
     .pagination__list {
       @apply flex;
 
-      li {
+      .page__number {
         @apply flex justify-center items-center w-[2.75rem] h-[2.75rem] select-none cursor-pointer rounded-[26px] transition-colors bg-offWhiteF text-black font-semibold;
 
         &:not(:last-child) {
@@ -41,6 +43,9 @@
     }
     .next__button {
       @apply ml-5;
+    }
+    .active__page {
+      @apply bg-darkAccents text-white #{!important};
     }
   }
 }
