--- a/src/shared/ui/card-about/styles.module.scss
+++ b/src/shared/ui/card-about/styles.module.scss
@@ -12,7 +12,7 @@
       @apply relative w-[3.75rem] h-[3.75rem];
 
       img {
-        @apply absolute top-0 left-0 w-full h-full;
+        @apply absolute top-0 left-0 w-full h-full rounded-full;
       }
     }
 
