Фикс стилей main-slider

--- a/src/widgets/main-slider/ui/styles.module.scss
+++ b/src/widgets/main-slider/ui/styles.module.scss
@@ -16,7 +16,7 @@
       }
 
       p {
-        @apply text-black tracking-[0.12rem] max-[1214px]:text-lg;
+        @apply text-black tracking-[0.12rem] max-[1214px]:text-lg uppercase;
       }
 
       h1 {
