Переименовал navbar в nav-item и перенес его в shared

--- a/src/shared/ui/nav-item/styles.module.scss
+++ b/src/shared/ui/nav-item/styles.module.scss
@@ -1,5 +1,5 @@
 .title {
-  @apply mr-8 font-medium text-darkGray cursor-pointer;
+  @apply font-medium text-darkGray cursor-pointer;
 
   &:hover {
     @apply text-black;
