--- a/src/shared/ui/card/styles.module.scss
+++ b/src/shared/ui/card/styles.module.scss
@@ -19,7 +19,7 @@
   }
 
   .image {
-    @apply relative h-[19.5rem] max-[911px]:h-[25rem] max-[428px]:h-[19.5rem];
+    @apply relative h-[19.5rem] max-[428px]:h-[19.5rem];
 
     img {
       @apply top-0 left-0 absolute h-full w-full rounded-md;
