В language добавил rotate

--- a/src/features/language/language-list/ui/styles.module.scss
+++ b/src/features/language/language-list/ui/styles.module.scss
@@ -5,6 +5,10 @@
     @apply pr-1.5 font-normal text-[0.8125rem] text-white;
   }
   img {
-    @apply w-3 h-3;
+    @apply w-3 h-3 transition-all;
+  }
+
+  .rotate {
+    @apply rotate-180;
   }
 }
