--- a/src/entities/our-products/ui/styles.module.scss
+++ b/src/entities/our-products/ui/styles.module.scss
@@ -4,9 +4,50 @@
   .header {
     @apply text-black font-semibold text-[2rem] leading-[110%] mb-4;
   }
-  .categories__list {
-    @apply flex flex-wrap justify-center mb-10;
+
+  .categories__block {
+    @apply relative flex justify-center items-center mb-10 max-[1022px]:flex-col max-[1022px]:mb-0;
+
+    .categories__list {
+      @apply flex flex-wrap justify-center;
+    }
+
+    .sort {
+      @apply z-[1] absolute right-0 mt-[1.25rem] max-[1022px]:relative;
+
+      .sort__button_block {
+        @apply flex cursor-pointer items-center font-medium text-black mb-[1.25rem];
+
+        .sort__by {
+          @apply text-base mr-3;
+        }
+
+        .current__sort {
+          @apply flex items-center justify-between border-b-[1px] border-dashed border-accents;
+
+          .title {
+            @apply mr-2 text-accents;
+          }
+
+          .arrow__icon {
+            @apply w-3 h-3 transition-all duration-[400ms];
+          }
+          .rotate__arrow {
+            @apply rotate-180 transition-all duration-[400ms];
+          }
+        }
+      }
+
+      .modal {
+        @apply relative text-center;
+
+        .modal__list {
+          @apply absolute w-full bg-white drop-shadow-1md rounded-lg py-2;
+        }
+      }
+    }
   }
+
   .products__list {
     @apply grid grid-cols-4 auto-rows-auto gap-y-10 gap-x-6 max-[1192px]:grid-cols-3 max-[911px]:grid-cols-2 max-[911px]:gap-x-3 max-[649px]:grid-cols-1 max-[649px]:w-[312px] max-[649px]:inline-block;
 
