--- a/src/shared/ui/buttons/Button/styles.module.scss
+++ b/src/shared/ui/buttons/Button/styles.module.scss
@@ -1,5 +1,5 @@
 .button {
-  @apply flex select-none;
+  @apply select-none;
 
   .container {
     @apply flex py-3.5 px-6 bg-accents rounded-lg cursor-pointer transition-colors;
