--- a/src/app/styles/normalize.scss
+++ b/src/app/styles/normalize.scss
@@ -2,7 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+html {
+  width: 100%;
+  width: 100vw;
+}
 body,
 #root {
   position: relative;
