--- a/src/pages/about/styles.module.scss
+++ b/src/pages/about/styles.module.scss
@@ -2,7 +2,7 @@
   @apply max-w-[1000px] text-justify text-black;
 
   .title {
-    @apply text-center mt-[1.5625rem] mb-[40px];
+    @apply text-center pt-[1.5625rem] mb-[40px];
 
     .header {
       @apply font-semibold text-[2rem] leading-[110%] mb-4;
@@ -20,4 +20,8 @@
       @apply font-black;
     }
   }
+}
+
+.with__scroll {
+  @apply pt-[218px] max-[866px]:pt-0;
 }
