--- a/src/widgets/header/ui/styles.module.scss
+++ b/src/widgets/header/ui/styles.module.scss
@@ -1,3 +1,13 @@
 .header {
-  @apply select-none z-10 relative;
+  @apply select-none z-50 relative;
+  width: 100%;
+  width: 100vw;
+}
+
+.header__fixed {
+  @apply fixed max-[866px]:relative;
+}
+
+.fixed__block {
+  @apply relative -mt-[48px] max-[866px]:-m-0;
 }
